--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,11 @@
-fastapi==0.115.0
-uvicorn==0.30.1
+fastapi==0.109.0
+uvicorn==0.27.0
+pydantic[email]
+passlib[bcrypt]
+python-jose[cryptography]
+python-multipart
+mysqlclient
+sqlalchemy
+python-dotenv
+alembic
+pyodbc
